Extract openssl to its own role

--- a/main.yml
+++ b/main.yml
@@ -56,6 +56,9 @@
     - role: maven
       tags: [foundational, package-and-build, brew-pkg, maven]
 
+    - role: openssl
+      tags: [foundational, package-and-build, brew-pkg, openssl]
+
     #############################################################################
     # Fonts #####################################################################
     #############################################################################
