--- a/main.yml
+++ b/main.yml
@@ -56,6 +56,9 @@
     - role: maven
       tags: [foundational, package-and-build, brew-pkg, maven]
 
+    - role: llvm
+      tags: [foundational, package-and-build, brew-pkg, llvm]
+
     - role: openssl
       tags: [foundational, package-and-build, brew-pkg, openssl]
 
