--- a/roles/istat-menus/tasks/main.yml
+++ b/roles/istat-menus/tasks/main.yml
@@ -4,4 +4,6 @@
     name: istat-menus
     state: latest
 
+- command: open /Applications/iStat\ Menus.app
+
 # TODO: open it if it was just installed for the first time?
