--- a/roles/graalvm/tasks/main.yml
+++ b/roles/graalvm/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
 - name: Download GraalVM
   get_url:
-    url: "https://github.com/oracle/graal/releases/download/vm-{{ graalvm_version }}/graalvm-ce-darwin-amd64-{{ graalvm_version }}.tar.gz"
+    url: "https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-{{ graalvm_version }}/{{ graalvm_archive }}"
     dest: "{{ downloads_directory }}/{{ graalvm_archive }}"
 
 - name: Extract GraalVM
   unarchive:
     src="{{ downloads_directory }}/{{ graalvm_archive }}"
     dest="{{ downloads_directory }}"
-    creates="{{ downloads_directory }}/{{ graalvm_directory }}"
+    creates="{{ downloads_directory }}/{{ graalvm_extracted_directory }}"
 
 - name: Install GraalVM
-  command: cp -R "{{ downloads_directory }}/{{ graalvm_directory }}" "/Applications/GraalVM-{{ graalvm_version }}.app"
+  command: cp -R "{{ downloads_directory }}/{{ graalvm_extracted_directory }}" "/Applications/GraalVM-{{ graalvm_version }}.app"
 
 - name: Install native-image utility
   command: /Applications/GraalVM-{{ graalvm_version }}.app/Contents/Home/bin/gu install native-image
