--- a/roles/graalvm/vars/main.yml
+++ b/roles/graalvm/vars/main.yml
@@ -1,3 +1,5 @@
 ---
-graalvm_archive: "graalvm-ce-darwin-amd64-{{ graalvm_version }}.tar.gz"
-graalvm_directory: "graalvm-ce-{{ graalvm_version }}"
+graalvm_java_version: "java11"
+graalvm_directory: "graalvm-ce-{{ graalvm_java_version }}-darwin-amd64-{{ graalvm_version }}"
+graalvm_archive: "{{ graalvm_directory }}.tar.gz"
+graalvm_extracted_directory: "graalvm-ce-{{ graalvm_java_version }}-{{ graalvm_version }}"
