Prevent reinstalling a few roles unnecessarily

--- a/roles/mac-ports/tasks/main.yml
+++ b/roles/mac-ports/tasks/main.yml
@@ -4,9 +4,15 @@
     url: https://distfiles.macports.org/MacPorts/{{ macports_pkg }}
     dest: "{{ downloads_directory }}/{{ macports_pkg }}"
 
+- name: Show current MacPorts version
+  command: port version
+  register: port_version_output
+  ignore_errors: yes
+
 - name: Install MacPorts
   command: installer -package {{ downloads_directory }}/{{ macports_pkg }} -target /
   become: yes
+  when: port_version_output.stdout.find(macports_version) == -1
   # NOTE: ignore errors because this is currently hard-coded to only work on
   # macOS Big Sur.
   ignore_errors: yes
