--- a/roles/zprint/tasks/main.yml
+++ b/roles/zprint/tasks/main.yml
@@ -1,7 +1,6 @@
 ---
 - name: Download and install zprint binary
-  unarchive:
-    src: https://github.com/kkinnear/zprint/releases/download/{{ zprint_version }}/zprintm-{{ zprint_version }}
+  get_url:
+    url: https://github.com/kkinnear/zprint/releases/download/{{ zprint_version }}/zprintm-{{ zprint_version }}
     dest: /usr/local/bin
     mode: u+x
-    remote_src: yes
