--- a/roles/python3/vars/main.yml
+++ b/roles/python3/vars/main.yml
@@ -1,2 +1,2 @@
 ---
-python3_pkg: python-{{ python3_version }}-macosx{{ python3_macos_version }}.pkg
+python3_pkg: python-{{ python3_version }}-macos{{ python3_macos_version }}.pkg
