--- a/main.yml
+++ b/main.yml
@@ -229,6 +229,9 @@
     - role: vtop
       tags: [observability, npm-pkg, vtop]
 
+    - role: wireshark
+      tags: [observability, brew-cask-pkg, wireshark]
+
     ############################################################################
     # Data Systems #############################################################
     ############################################################################
