Install Elgato Control Center

--- a/main.yml
+++ b/main.yml
@@ -403,6 +403,9 @@
         # http://download.videolan.org/pub/videolan/vlc/
         vlc_version: "3.0.16"
 
+    - role: elgato-control-center
+      tags: [desktop-applications, brew-pkg, elgato-control-center]
+
     - role: zwift
       tags: [desktop-applications, brew-pkg, zwift]
 
